# decalid-rs

./: .gitignore  Cargo.toml  README.md  tests.sh
migrations/: 20241015161800_create_caldav_events.sql
src/: main.rs  models.rs
src/commands/: calendars.rs  ics.rs  mod.rs  users.rs
tests/: sample.ics
