[package]
name = "decalid-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"]}
ical = "0.8"
anyhow = "1.0"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
chrono-tz = "0.10.0"
